--- a/src/app/src/_modules/home/header/header.component.html
+++ b/src/app/src/_modules/home/header/header.component.html
@@ -256,7 +256,7 @@
             <a href="/gio-hang" class="course-cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span
                 class="course-sl-cart"><b>0</b></span></a>
             <a class="course-reg-acc ml-2" href='/signup' *ngIf='!logged'>Đăng ký</a>
-            <a class="course-log-acc" routerLink='login' *ngIf='!logged'>Đăng nhập</a>
+            <a class="course-log-acc" routerLink='/login' *ngIf='!logged'>Đăng nhập</a>
             <a class="nav-item dropdown ml-3" dropdown>
               <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light dropdown-main" *ngIf='logged'>
                 <i class="fas fa-user"></i>
