--- a/src/app/src/_modules/home/learn-now/learn-now.component.html
+++ b/src/app/src/_modules/home/learn-now/learn-now.component.html
@@ -7,35 +7,35 @@
           <div class="unica-lt-box">
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://i.imgur.com/wRBPUrA.png);">
-                <a href="https://unica.vn/tag/yoga">
+                <a href="">
                   <span>Yoga</span>
                 </a>
               </div>
             </div>
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://unica.vn/media/img/a7.png);">
-                <a href="https://unica.vn/tag/thiet-ke">
-                  <span>Thiết kế</span>
+                <a href="">
+                  <span>Âm Nhạc</span>
                 </a>
               </div>
             </div>
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://unica.vn/media/img/a1.png);">
-                <a href="https://unica.vn/tag/lap-trinh-web">
-                  <span>Lập trình web</span>
+                <a href="">
+                  <span>Lập Trình</span>
                 </a>
               </div>
             </div>
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://unica.vn/media/img/a4.png);">
-                <a href="https://unica.vn/tag/kinh-doanh">
-                  <span>Kinh doanh</span>
+                <a href="">
+                  <span>Kinh Tế</span>
                 </a>
               </div>
             </div>
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://unica.vn/media/img/a2.png);">
-                <a href="https://unica.vn/tag/ban-hang-online">
+                <a href="">
                   <span>Bán hàng online</span>
                 </a>
               </div>
