--- a/src/app/src/_modules/home/cart/cart.component.css
+++ b/src/app/src/_modules/home/cart/cart.component.css
@@ -1,15 +1,109 @@
-.example-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  
-  .example-events {
-    width: 300px;
-    height: 200px;
-    overflow: auto;
-    border: 1px solid #555;
-  }
-  
+/* Bread Cart */
+.u-bread-cart .breadcrumb > li + li:before { display: none; }
+
+.u-bread-cart .unica-breadcrumb .breadcrumb > li { display: list-item; }
+.u-bread-cart .unica-breadcrumb .breadcrumb > li > a { color: #fff; }
+.u-bread-cart .unica-breadcrumb .breadcrumb > .active {     color: #fff;    font-size: 30px;    margin-top: 5px;}
+.u-bread-cart { background: #1d9fc7; }
+.u-bread-cart .breadcrumb { padding: 35px 0;  margin-bottom: 0; background: #1d9fc7; }
+.col-cart { margin-top: 10px; }
+/* Cart item */
+.unica-order { margin: 15px 0 9px 0; padding-right: 0; }
+.unica-order input {     width: 20px;    height: 18px;    margin: 1px 1px 0; }
+.btn-order { float: left; margin: -1px 10px 0 0; background: #f67052 ; color: #fff; font-weight: bold; padding: 3px 10px; border-radius: 3px; }
+.u-sort { float: right; margin-top: -5px; margin-right: 10px; }
+.mgr { margin-right: 10px; }
+
+.u-box-cart-title { margin: 45px 10px 0; text-align: center;}
+.u-box-cart-title p { font-size: 16px; }
+.u-box-cart {text-align: center; padding: 20px; margin: 10px 0;}
+.u-box-cart .u-box-cart-title h1 {font-size: 32px; font-weight: bold;}
+.u-cart-txt { font-size: 20px;  }
+.u-icon-cart i { font-size: 120px; color: #ccc; }
+.btn-cart { background: #ec5252; padding: 10px 15px; font-weight: bold; color: #fff; display: inline-block; margin: 10px 0; border-radius: 3px; border: none;}
+.u-cart-course { display: flex; border-bottom: 1px solid #dedfe0; padding-bottom: 10px; padding-top: 10px;}
+.u-cart-course:last-child { border: 0; padding-bottom: 0; }
+.u-box-cart2 {  border: 1px solid #eee; padding: 10px; margin:  10px 0;  display: inline-block; width: 100%; position: relative; }
+.u-cart-combo-course { border: 1px solid #eee; padding: 10px; margin:  10px 0;  display: inline-block; width: 100%; position: relative; }
+.u-cart-combo-course .u-cart-course { border: none; }
+.u-cart-combo-course .remove-course { position: absolute; top: 9px; right: 12px; color: red; cursor: pointer;}
+.u-box-cart2 .label { position: absolute; top: 20px; border-radius: 0 8px 8px 0; }
+.u-box-cart-big { position: relative; border-bottom: 1px solid #eee;  padding-bottom: 10px; }
+.u-box-cart-big:last-child { border: 0; padding-bottom: 0; }
+.img-cart-course { margin-right: 10px; width: 10%; }
+.title-cart-course { text-align: left; width: 70%; margin-left:100px }
+.title-cart-course p { font-weight: bold; }
+.u-box-cart2 .remove-course { cursor: pointer; width: 5%; font-size: 16px; color: #f00;position: relative;top: 3px; left: 17px}
+.price-cart { width: 30%; text-align: right}
+.price-cart p { font-size: 20px; font-weight: bold; }
+.price-cart sup { font-size: 14px; }
+.price-cart span { text-decoration: line-through;  }
+.price-cart span sup { font-size: 10px; }
+.u-cart-price { margin-top: 15px;  }
+.u-cart-price p { font-size: 18px; }
+.price-btn-box a { color: #fff; background: #ec5252; padding: 10px 20px; text-align: center; border-radius: 3px; font-weight: bold; display: inline-block; width: 100%;  text-transform: uppercase;}
+.cart-notice p { font-size: 14px; color: #7a8388; text-align: center;margin-top: 15px; }
+.price-cart-box { display: inline-block; width: 100%; margin: 0 0 10px 0;  }
+.price-cart-1 { color: #ec5252; font-size: 26px; font-weight: bold; }
+.price-cart-1 sup { font-size: 14px; }
+.price-cart-2 { margin: 5px 0; }
+.price-cart-2 p { font-size: 14px; display: inline-block; }
+.price-cart-2 sup { font-size: 12px; }
+.price-cart-2 span { text-decoration: line-through; }
+.price-cart-3 { font-size: 14px; }
+.price-cart-3 p { display: inline-block; font-size: 14px; }
+.more-cart { margin: 10px 0; text-align: center;}
+.more-cart p { font-size: 13px; }
+.more-cart a {color: #fff; background: #03A9F4; padding: 10px 20px; width: 30%; border-radius: 3px; font-weight: bold; display: inline-block; margin-top: 5px; }
+.u-box-cart-title2 { font-size: 18px; font-weight: bold; margin-top: 20px; }
+.u-cart-price2 { margin-top: 20px;  }
+.u-cart-price2 p { font-size: 16px; font-weight: bold; }
+.u-box-cart2 .form-inline .form-control { width: 100%; height: 40px; }
+span.required {    color: #F44336;}
+.u-box-cart2 label { float: left; font-weight: bold; margin-bottom: 5px; }
+.button-continue {    background-color: #f26c4f;    color: #fff;    font-size: 18px;    font-weight: 700; float: left; margin-top: 10px;}
+.u-c-title { border-bottom: 1px solid #e6e6e6; padding: 5px 0; display: inline-block; width: 100%; }
+.u-c-title p { font-size: 14px; float: left; }
+.u-c-title a { float: right; }
+.total-cart {margin-top: 10px; padding-top: 5px; width: 100%; display: inline-block; }
+.cart-course { display: inline-block; width: 100%; padding: 15px 0; }
+
+.ult-r sup { font-size: 10px; }
+.bd-cart-no { border: 0; }
+.name-cart-course { width: 70%; float: left; }
+.ult-l { float: left;margin-top: 5px;  }
+.ult-r { float: right; margin-top: 5px;  }
+
+
+.price-cart-course { float: right; }
+.price-cart-course sup { font-size: 12px; }
+.price-cart-course span { font-size: 14px; text-decoration: line-through; }
+.price-cart-course span sup { font-size: 10px; }
+.total-cart p {float: left;}
+.total-cart sup {font-size: 12px;}
+.total-cart span {float: right; font-size: 16px; font-weight: bold; color: #f00;}
+
+.steps {    list-style: none;    display: table;    width: 100%;    padding: 0;    margin: 0;   position: relative;}
+.steps li {    display: table-cell;    text-align: center;    width: 1%;}
+.steps li.active:before, .steps li.complete:before, .steps li.active .step, .steps li.complete .step {    border-color: #12cbec;}
+.steps li:first-child:before {    max-width: 51%;    left: 50%;}
+.steps li:before { display: block; content: ""; width: 100%;height: 1px; font-size: 0; overflow: hidden; border-top: 4px solid #CED1D6; position: relative; top: 21px; z-index: 1;}
+.steps li .step { border: 5px solid #ced1d6; color: #546474; font-size: 15px; border-radius: 100%; background-color: #FFF; position: relative; z-index: 2; display: inline-block;    width: 40px; height: 40px; line-height: 30px; text-align: center; }
+.u-box-step {     display: inline-block;    width: 100%;    margin: 20px 0; }
+.steps li.complete .title, .steps li.active .title {  color: #fff;}
+.steps li .title { display: block; margin-top: 4px; max-width: 100%; color: #fff; font-size: 14px; z-index: 104; text-align: center; table-layout: fixed; word-wrap: break-word;}
+.steps li:last-child:before {    max-width: 50%;    width: 50%; }
+
+.btn-complete { padding: 7px 10px ; font-weight: bold; font-size: 16px; color: #fff; background: #5cb85c; text-align: center; margin-top: 10px; width: 100%; display: inline-block; border-radius: 3px; margin-bottom: 10px;}
+.u-box-cart-title2 span { font-size: 14px; font-weight: normal; }
+.u-box-cart3 .panel-heading  { background: #eee; color: #333; }
+.u-box-cart3 i { font-size: 24px; margin-right: 5px; width: 30px; text-align: center; }
+.u-box-cart3 .fh { font-size: 30px; vertical-align: sub; }
+b { font-weight: bold; }
+.cart-complete { text-align: center;  margin: 20px 0; font-size: 16px; line-height: 30px; border: 1px solid #eee; padding: 20px; }
+.cart-complete i { font-size: 120px; color: #00b609; }
+.cart-complete p { font-size: 20px; font-weight: bold; margin: 20px 0; }
+.u-cart-more-course { padding: 10px 0; border: 1px solid #eee; display: inline-block; }
+.u-cart-more-course h3 { font-size: 24px; font-weight: bold; margin-left: 10px; }
+.u-cart-more-course {    padding: 10px 0;    border: 1px solid #eee;    display: inline-block;}
+.u-cart-more-course h3 {    font-size: 24px;    font-weight: bold;    margin-left: 10px;}
