--- a/src/app/src/_modules/home/course-detail/course-detail.component.css
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.css
@@ -1,19 +1,37 @@
-.overlay{
-    min-height: 300px;
+#overlay{
+    min-height: 400px;
     /* background-attachment: fixed; */
-    background-image: url('../../../../../assets/img/carousel.jpg');
-    background-position: center;
-    background-repeat: no-repeat; 
-    position: relative;
-    /* width: 100%; */
-    color:white;
-    text-align:left;
+    /* background-image: url('../../../../../assets/img/carousel.jpg'); */
     
+    /* width: 100%; */
+    /* color:white; */
+    text-align:left;
+    color: #2cd42c;
+    filter: blur(4px);
+    -webkit-filter: blur(3px);
+  
+    /* Full height */
+    height: 100%; 
+  
+    /* Center and scale the image nicely */
+    
+  
+
+  /* Full height */
+    
+
+  /* Center and scale the image nicely */
+  
 }
+
+   
+
 .overlay h3{
     /* color: #ffffff; */
+    
     font-weight:300;
-
+   
+    
 }
 .btn-start{
     font-size:1.1rem;
@@ -24,15 +42,38 @@
 }
 .course-intro{
     max-width: 500px;
-      position: absolute;
-      top: 10%;
-      left: 11%; 
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -150%);
+    z-index: 2;
+    width: 100%;
+    padding: 20px;
+    text-align: center;
 }
 .course-content h1{
     font-size:30px;
     color: #5cb85c;
     font-weight: 300;
 
+
+}
+.course-info{
+    margin-top: -200px;
+}
+
+#course-comment-img{
+    height: 18rem;
+    width: 100%;
+    background-position: center center;
+}
+.course-price{
+    font-weight: bolder;
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover{
 border-width: 5px;
