--- a/src/app/src/_modules/home/course-detail/course-detail.component.html
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.html
@@ -1,171 +1,190 @@
 <!-- Overlay -->
 <div class="container-fluid">
-    <section class="overlay">
-        <div class="course-intro">
-            <h3 class="display-4">{{thongTinKH.TenKH}}</h3>
-            <span>Đánh Giá</span>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <br>
-            <a class="btn btn-success btn-start waves-light" mdbWavesEffect routerLink="/watch">Bắt đầu học</a>
+    <div id="overlay"></div>
+    <section class="course-intro">
+        <h3 class="display-4">{{tenKh}}</h3>
+        <div class="d-flex justify-content-between">
+            <div>
+                <span>Đánh Giá</span>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <br>
+                <a class="btn btn-success btn-start waves-light" mdbWavesEffect routerLink="/watch">Bắt đầu học</a>
+            </div>
+            <div>
+                <p>Giảng viên hướng dẫn: {{this.thongTinKH.GiangVien}}</p>
+            </div>
         </div>
+
+
     </section>
-    <div class="row">
+    <div class="row course-info">
         <!-- End Overlay -->
         <!-- Course Main -->
-        <div class="course-container col-xl-12">
-            <div class="course-main col-xl-8">
-                <ul class="nav nav-tabs course-tab">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#intro">Giới thiệu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#main">Nội dung khóa học</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#rate">Đánh giá</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#homework">Bài tập</a>
-                    </li>
-                </ul>
-                <div class="tab-content course-content my-3">
-                    <div class="tab-pane active" id="intro">
-                        <h1 class="display-4">Tổng quan về khóa học</h1>
-                        <div id="accordion">
-                            <div class="card">
-                                <div class="card-header d-flex justify-content-between justify-item-center">
-                                    <div class="collapse-icon-left d-flex">
-                                        <div class="box-icon">
-                                            <i class="fa fa-university icon-left"></i>
-                                        </div>
-                                        <div class="box-text">
-                                            <span class="lead">Tổng quan</span>
-                                            <h3 class="mb-1">Giới thiệu về khóa học</h3>
-                                        </div>
-
+        <div class="course-main col-lg-8">
+            <ul class="nav nav-tabs course-tab">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#intro">Giới thiệu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#main">Nội dung khóa học</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#rate">Đánh giá</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#homework">Bài tập</a>
+                </li>
+            </ul>
+            <div class="tab-content course-content my-3">
+                <div class="tab-pane active" id="intro">
+                    <h1 class="display-4">Tổng quan về khóa học</h1>
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header d-flex justify-content-between justify-item-center">
+                                <div class="collapse-icon-left d-flex">
+                                    <div class="box-icon">
+                                        <i class="fa fa-university icon-left"></i>
                                     </div>
-                                    <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
-                                        <i class="material-icons icon-right text-center " data-toggle="collapse"
-                                            href="#collapseOne">add</i>
+                                    <div class="box-text">
+                                        <span class="lead">Tổng quan</span>
+                                        <h3 class="mb-1">Giới thiệu về khóa học</h3>
                                     </div>
 
                                 </div>
-                                <div id="collapseOne" class="collapse" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
+                                <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
+                                    <i class="material-icons icon-right text-center " data-toggle="collapse"
+                                        href="#collapseOne">add</i>
+                                </div>
+
+                            </div>
+                            <div id="collapseOne" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    Lorem ipsum..
+                                </div>
+                                <div class="card-body">
+                                    Lorem ipsum..
+                                </div>
+                                <div class="card-body">
+                                    Lorem ipsum..
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-header d-flex justify-content-between justify-item-center">
-                                    <div class="collapse-icon-left d-flex">
-                                        <div class="box-icon">
-                                            <i class="fa fa-tags icon-left m-auto"></i>
-                                        </div>
-                                        <div class="box-text">
-                                            <span class="lead">Tổng quan</span>
-                                            <h3 class="mb-1">Giới thiệu về khóa học</h3>
-                                        </div>
-
+                        </div>
+                        <div class="card">
+                            <div class="card-header d-flex justify-content-between justify-item-center">
+                                <div class="collapse-icon-left d-flex">
+                                    <div class="box-icon">
+                                        <i class="fa fa-tags icon-left m-auto"></i>
                                     </div>
-                                    <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
-                                        <i class="material-icons icon-right text-center " data-toggle="collapse"
-                                            href="#collapseTwo">add</i>
+                                    <div class="box-text">
+                                        <span class="lead">Tổng quan</span>
+                                        <h3 class="mb-1">Giới thiệu về khóa học</h3>
                                     </div>
 
                                 </div>
-                                <div id="collapseTwo" class="collapse" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
+                                <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
+                                    <i class="material-icons icon-right text-center " data-toggle="collapse"
+                                        href="#collapseTwo">add</i>
+                                </div>
+
+                            </div>
+                            <div id="collapseTwo" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    Lorem ipsum..
+                                </div>
+                                <div class="card-body">
+                                    Lorem ipsum..
+                                </div>
+                                <div class="card-body">
+                                    Lorem ipsum..
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-header d-flex justify-content-between justify-item-center">
-                                    <div class="collapse-icon-left d-flex">
-                                        <div class="box-icon">
-                                            <i class="material-icons icon-left m-auto">people</i>
-                                        </div>
-                                        <div class="box-text">
-                                            <span class="lead">Tổng quan</span>
-                                            <h3 class="mb-1">Giới thiệu về khóa học</h3>
-                                        </div>
-
+                        </div>
+                        <div class="card">
+                            <div class="card-header d-flex justify-content-between justify-item-center">
+                                <div class="collapse-icon-left d-flex">
+                                    <div class="box-icon">
+                                        <i class="material-icons icon-left m-auto">people</i>
                                     </div>
-                                    <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
-                                        <i class="material-icons icon-right text-center " data-toggle="collapse"
-                                            href="#collapseThree">add</i>
+                                    <div class="box-text">
+                                        <span class="lead">Tổng quan</span>
+                                        <h3 class="mb-1">Giới thiệu về khóa học</h3>
                                     </div>
 
                                 </div>
-                                <div id="collapseThree" class="collapse" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
+                                <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
+                                    <i class="material-icons icon-right text-center " data-toggle="collapse"
+                                        href="#collapseThree">add</i>
+                                </div>
+
+                            </div>
+                            <div id="collapseThree" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    Lorem ipsum..
+                                </div>
+                                <div class="card-body">
+                                    Lorem ipsum..
+                                </div>
+                                <div class="card-body">
+                                    Lorem ipsum..
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-header d-flex justify-content-between justify-item-center">
-                                    <div class="collapse-icon-left d-flex">
-                                        <div class="box-icon">
-                                            <i class="fa fa-file icon-left m-auto"></i>
-                                        </div>
-                                        <div class="box-text">
-                                            <span class="lead">Tổng quan</span>
-                                            <h3 class="mb-1">Giới thiệu về khóa học</h3>
-                                        </div>
-
+                        </div>
+                        <div class="card">
+                            <div class="card-header d-flex justify-content-between justify-item-center">
+                                <div class="collapse-icon-left d-flex">
+                                    <div class="box-icon">
+                                        <i class="fa fa-file icon-left m-auto"></i>
                                     </div>
-                                    <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
-                                        <i class="material-icons icon-right text-center " data-toggle="collapse"
-                                            href="#collapseFour">add</i>
+                                    <div class="box-text">
+                                        <span class="lead">Tổng quan</span>
+                                        <h3 class="mb-1">Giới thiệu về khóa học</h3>
                                     </div>
 
                                 </div>
-                                <div id="collapseFour" class="collapse" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
-                                    <div class="card-body">
-                                        Lorem ipsum..
-                                    </div>
+                                <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
+                                    <i class="material-icons icon-right text-center " data-toggle="collapse"
+                                        href="#collapseFour">add</i>
+                                </div>
+
+                            </div>
+                            <div id="collapseFour" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    Lorem ipsum..
+                                </div>
+                                <div class="card-body">
+                                    Lorem ipsum..
+                                </div>
+                                <div class="card-body">
+                                    Lorem ipsum..
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="main">123</div>
-                    <div class="tab-pane" id="rate">123</div>
-                    <div class="tab-pane" id="homework">123</div>
                 </div>
-            </div>
-
-            <div class="course-comment col-xl-4">
+                <div class="tab-pane" id="main">123</div>
+                <div class="tab-pane" id="rate">123</div>
+                <div class="tab-pane" id="homework">123</div>
             </div>
         </div>
-    </div>
-</div>
+
+        <div class="course-comment col-lg-4">
+            <div id="course-comment-img">
+
+            </div>
+            <div class="course-comment-content">
+                <span>Lorem ipsum dolor sit amet.</span><br>
+                <span>Lorem ipsum dolor sit amet.</span><br>
+                <span>Lorem ipsum dolor sit amet.</span>
+                <hr>
+                <h3 class="course-price lead">{{thongTinKH.ThanhTien | currency:'VND':'symbol':'3.0-1'}}</h3>
+                <a class="btn btn-success btn-start waves-light" mdbWavesEffect routerLink="/watch">Ghi Danh</a>
+            </div>
+
+
+
+
+        </div>
