--- a/src/app/src/_modules/home/course-watch/course-watch.component.css
+++ b/src/app/src/_modules/home/course-watch/course-watch.component.css
@@ -6,7 +6,7 @@
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color:transparent; /* Black*/
+    background-color:#F6F8F8; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -16,12 +16,14 @@
   .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 16px;
     /* color: #818181; */
     display: block;
     transition: 0.3s;
   }
-  
+  .sidenav .card-header{
+    background: #ffffff;
+  }
   /* When you mouse over the navigation links, change their color */
   .sidenav a:hover {
     color: #f1f1f1;
@@ -35,7 +37,9 @@
     font-size: 36px;
     margin-left: 50px;
   }
-  
+  #openNav{
+    color: #69BE69;
+  }
   /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
   #main {
     transition: margin-left .5s;
@@ -44,7 +48,7 @@
   .blur{
     background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(25, 226, 226, 0.89));
     /* opacity: 0; */
-    height: 161%;
+    height: 120%;
     position: absolute;
     top: 0;
     bottom:0;
@@ -56,15 +60,34 @@
   }
   #main .video{
     position: relative;
-    z-index:2;
+    
   }
   #main .video-header{
     position: absolute;
-    width: 1024px;
+    width: 52px;
     background-color: #444;
     height: 50px;
     z-index:3;
+    text-align: center;
+    color: #69BE69;
   }
+  .resp-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    z-index:2;
+}
+.resp-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+.fa-play-circle{
+  color: #69BE69;
+}
   #openNav{
     
     font-size:30px;
@@ -82,6 +105,10 @@
   transition: 0.4s;
 }
 
+.sidenav a.card-link{
+  font-size:26px;
+  color:#686f7a;
+}
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
   background-color: #ccc;
@@ -100,6 +127,26 @@
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+    .sidenav a {font-size: 12px;}
+  }
+  @media screen and (max-width: 1200px) {
+    .sidenav a {font-size: 12px;}
+    .sidenav a.card-link {font-size: 15px;}
+  }
+  @media screen and (max-width: 992px) {
+    .sidenav a {font-size: 12px;}
+    .sidenav a.card-link {font-size: 15px;}
+  }
+  @media screen and (max-width: 767px) {
+    .sidenav a {font-size: 12px;}
+    .sidenav a.card-link {font-size: 15px;}
+  
+  }
+  @media screen and (max-width: 480px) {
+    .sidenav a {font-size: 12px;}
+    .sidenav a.card-link {font-size: 15px;}
+
   }
   
+  
+    
