--- a/src/app/src/_modules/home/home-page/home-page.component.html
+++ b/src/app/src/_modules/home/home-page/home-page.component.html
@@ -206,7 +206,46 @@
 </section>
 
 <!-- End Best View Code -->
-
+<div class="container">
+    <!-- <div class="row"> -->
+            <div class="row course-reason">
+                <h4 class="col-lg-12">Tại sao bạn nên học cùng Unica?</h4>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                    <div class="reason-4">
+                        <div class="img-reason"><img class="img-responsive" src="../../../../../assets/img/d1.png" alt=""></div>
+                        <div class="txt-reason"> Học trực tuyến
+                            <span>mọi lúc, mọi nơi</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                    <div class="reason-4">
+                        <div class="img-reason"><img class="img-responsive" src="../../../../../assets/img/d2.png" alt=""></div>
+                        <div class="txt-reason"> Hoàn tiền
+                            <span>nếu không hài lòng</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                    <div class="reason-4">
+                        <div class="img-reason"><img class="img-responsive" src="../../../../../assets/img/d3.png" alt=""></div>
+                        <div class="txt-reason"> Thanh toán 1 lần
+                            <span>học mãi mãi</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                    <div class="reason-4">
+                        <div class="img-reason"><img class="img-responsive" src="../../../../../assets/img/d4.png" alt=""></div>
+                        <div class="txt-reason"> Giao miễn phí
+                            <span>khóa học tới tận nhà</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
+    <!-- </div> -->
+</div>
 <!-- FeedBack -->
 <section class="student container-fluid">
     <div class="student_content">
