--- a/src/app/src/_modules/home/course-detail/course-detail.component.css
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.css
@@ -36,7 +36,8 @@
 .btn-start{
     font-size:1.1rem;
     border-radius:10px!important;
-    width: 9rem;
+    width: 100%;
+    background:#FF3333;
     height: 3rem;
     line-height: 45px;
 }
@@ -64,16 +65,18 @@
 
 }
 .course-info{
-    margin-top: -200px;
+    margin-top: -150px;
+    ;
 }
 
 #course-comment-img{
-    height: 18rem;
-    width: 100%;
+    height: 273px;
+    width: 420px;
     background-position: center center;
 }
 .course-price{
     font-weight: bolder;
+    font-size:32px;
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover{
 border-width: 5px;
@@ -137,4 +140,9 @@ color: #555;
 .fa-star{
     color:yellow;
     margin-right: 10px;
+}
+h3 span{
+    position: relative;
+    top: -10px;
+    font-size: 15px;
 }
