--- a/src/app/src/_modules/home/cart/cart.component.html
+++ b/src/app/src/_modules/home/cart/cart.component.html
@@ -17,21 +17,21 @@
             <div class="row">
                 <div class="col-lg-9 col-md-9 col-sm-8 col-cart">
                     <div class="u-box-cart2">
-                        <div class="u-cart-course">
+                        <div class="u-cart-course" *ngFor='let item of items;let i=index;'>
                             <div class="img-cart-course">
                                 <img class="img-responsive"
-                                    src="https://static.unica.vn/upload/images/2019/04/hoc-nhap-hang-trung-quoc-1688-taobao_m_1555573426.jpg"
+                                    src={{item.HinhAnh}}
                                     alt="" width="140" height="70"> </div>
                             <div class="title-cart-course">
-                                <p>Tự nhập hàng trên các trang thương mại điện tử Trung Quốc (Taobao, 1688, Tmall)</p>
-                                <span>Giảng viên: Mai Thu Hà</span>
+                                <p>{{item.TenKH}}</p>
+                                <span>Giảng viên: {{item.TenGiangVien}}</span>
                             </div>
                             <div class="price-cart cart-price-sub">
-                                <p>699,000<sup>đ</sup></p>
+                                <p>{{item.Gia | number:'.0'}}<sup>đ</sup></p>
                             </div>
                             <div class="remove-course">
-                                <i type="course_id" title="Xóa khóa học này" alt="Xóa khóa học này" id="898"
-                                    price_sale="699000" discount="0" class="fa fa-times del_cart"
+                                <i type="course_id" title="Xóa khóa học này" alt="Xóa khóa học này" (click)='Xoa(item.Id)'
+                                     class="fa fa-times del_cart"
                                     aria-hidden="true"></i>
 
                             </div>
@@ -45,7 +45,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4">
                     <div class="u-cart-price">
                         <div class="price-cart-box clearfix">
-                            <div class="price-cart-1">699,000<sup>đ</sup></div>
+                            <div class="price-cart-1">{{totalPrice | number:'.0'}}<sup>đ</sup></div>
                         </div>
                         <div class="price-btn-box">
                             <a href="/order/step1">Thanh toán</a>
